coscup.css
body, html {
	margin: 0; padding: 0; height: 100%; width: 100%;
	background-color: #d0d0d0;
	overflow: hidden;
}
body {
	background: #e0e0e0;
	background-image: -webkit-gradient(radial, 32% center, 0, 32% center, 900, from(#fff), to(#aaa));
	background-image: -moz-radial-gradient(32% center, ellipse closest-side, #fff 0%, #aaa 900px);
}
p {
	margin: 0; padding: 0;
	font-family: "Myriad Pro", "Lucida Grande", Helvetica, Arial,
	  "Heiti TC", "Hiragino Kaku Gothic Pro", "Hiragino Sans GB", "Lihei Pro", 
	  "文泉驛微米黑", "Droid Sans Fallback",
	  "新細明體", sans-serif !important;
}
a {
	color: #333;
	text-decoration: none;
}
input {
	font-size: 14px;
}
a:hover {
	text-decoration: underline;
}
#photos {
	position: absolute;
	width: 65%;
	min-width: 750px;
	top: -10%; bottom: -10%;
	left: -10%;
	-webkit-transform: rotate(-10deg);
	-moz-transform: rotate(-10deg);
	-ms-transform: rotate(-10deg);
	-o-transform: rotate(-10deg);
}

#photos img {
	position: absolute;
	-webkit-transition: all .3s;
	-moz-transition: all .3s;
	-o-transition: all .3s;
	border: 1 solid #bbb;
}

#photos img:hover {
	opacity: 1!important;
	-webkit-transform: scale(1.8) rotate(10deg);
	-moz-transform: scale(1.8) rotate(10deg);
	-ms-transform: scale(1.8) rotate(10deg);
	-o-transform: scale(1.8) rotate(10deg);
	border: 5px solid #bbb;
	z-index: 2;
}
#info.beforeLoad {
	opacity: 0;
}
#info {
	position: absolute;
	width: 60%; height: 40%;
	min-width: 640px;
	min-height: 275px;
	top: 30%;
	right: 3%;
	background-color: #fff;
	background-color: rgba(255,255,255,0.6);
	-webkit-transition: all .3s ease-out;
	-moz-transition: all .3s ease-out;
	-o-transition: all .3s ease-out;
	opacity: 1;
}

#info input {
	opacity: 0.7;
}

#info:hover {
	-webkit-transition: all .3s ease-in;
	-moz-transition: all .3s ease-in;
	-o-transition: all .3s ease-in;
	background-color: rgba(255,255,255,0.9);
	right: 3.5%;
}

#info:hover input {
	opacity: 1;
}

h1 a {
	font-size: 60px;
	font-style: italic;
	font-family: 'Corben', arial, serif;
	color: #389f2d;
	margin: 0; padding: 0;
	position: absolute;
	top: 30px; left: 30px;
	text-shadow: 0 0 10px #fff, 0 0 5px #fff;
}
h1 a:hover {
	text-decoration: none;
}

#info p {
	position: absolute;
	color: #333;
	left: 35px;
	font-weight: bold;
}

#title {
	top: 120px;
	font-size: 16px;
}

#date {
	top: 170px;
	font-size: 30px;
}

#subscribe {
	top: 220px;
	font-size: 20px;
}

#archives {
	position: absolute;
	bottom: 20px; right: 3%;
	margin: 0; padding: 0;
	font-size: 12px;
}

#addToGCal {
	text-indent: -10000px;
	display: inline-block;
	vertical-align: top;
	width: 16px; height: 16px;
	background: transparent url('https://calendar.google.com/googlecalendar/images/favicon_v2010.ico');
	-webkit-transform: rotate(-10deg);
	-moz-transform: rotate(-10deg);
	-ms-transform: rotate(-10deg);
	-o-transform: rotate(-10deg);
	-webkit-transition: all .3s ease-out;
	-moz-transition: all .3s ease-out;
	-o-transition: all .3s ease-out;
}

#addToGCal:hover {
	-webkit-transition: all .3s ease-in;
	-moz-transition: all .3s ease-in;
	-o-transition: all .3s ease-in;
	-webkit-transform: rotate(0deg);
	-moz-transform: rotate(0deg);
	-ms-transform: rotate(0deg);
	-o-transform: rotate(0deg);
}

